--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,33 @@ header{
 }
 .portada{
     background-color: #E1E2E0;
+    display: grid;
+    width: 100%;
+    height: 700px;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(12,1fr);
 }
+
+.portada img{
+    grid-row-start: 1;
+    grid-row-end: 13;
+    grid-column-start: 1;
+    grid-column-end: 13;
+    order: 1;
+    width: 100%;
+    height: 700px;
+    object-fit: contain;
+}
+
 .portada h1{
     font-size: 3.125rem;
     font-family: 'Averia Serif Libre', cursive;
+    grid-row-start: 7;
+    grid-row-end: 10;
+    grid-column-start: 5;
+    grid-column-end: 9;
+    order: 2;
+    text-align: center;
 }
 
 .portada button{
@@ -32,39 +55,129 @@ header{
     font-family: 'PT Sans', sans-serif;
     background-color: black;
     color: aliceblue;
+    grid-row-start: 11;
+    grid-row-end: 12;
+    grid-column-start: 6;
+    grid-column-end: 8;
+    text-align: center;
+    order: 3;
+}
+
+.categoria1{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
 }
 .categoria1a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
 }
+.categoria1a img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
 .categoria1b{
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: flex-start;
+}
+.categoria1b li img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.categoria2{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
 }
 .categoria2a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
 }
+.categoria2a img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
 .categoria2b{
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: flex-end;
+}
+.categoria2b li img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.categoria3{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
 }
 .categoria3a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
 }
+.categoria3a img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
 .categoria3b{
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: flex-start;
+}
+.categoria3b li img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+.categoria4{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 600px;
 }
 .categoria4a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
 }
+.categoria4a img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
 .categoria4b{
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    align-items: flex-end;
 }
+.categoria4b li img{
+    width: 100%;
+    height: 300px;  object-fit: cover;
+
+}
+
 footer{
     height: 20rem;
     background-color: #2D4262
@@ -72,16 +185,21 @@ footer{
 }
 
 .navbottom{
-    padding-top: 3%;
-    padding-left: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 .navbottom div{
-    display: inline-block;
     font-family: 'PT Sans', sans-serif;
+    flex-direction: row;
 }
-
 .redes li{
     display: inline;
+}
+
+.ayuda{
+    display: flex;
+    flex-direction: column;
 }
 .ayuda li{
     list-style: none;
