--- a/css/style.css
+++ b/css/style.css
@@ -64,15 +64,32 @@ header{
 }
 
 .categoria1{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 600px;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10,60px)
 }
 .categoria1a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 11;
+    order: 1;
+}
+.categoria1 button{
+    font-size: 16px;
+    font-family: 'PT Sans', sans-serif;
+    background-color: black;
+    color: aliceblue;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    order: 3;
 }
 .categoria1a img{
     width: 100%;
@@ -80,11 +97,14 @@ header{
     object-fit: cover;
 }
 .categoria1b{
+    grid-column-start: 6;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 11;
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    align-items: flex-start;
 }
 .categoria1b li img{
     width: 100%;
@@ -93,15 +113,32 @@ header{
 }
 
 .categoria2{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 600px;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10,60px)
+}
+.categoria2 button{
+    font-size: 16px;
+    font-family: 'PT Sans', sans-serif;
+    background-color: black;
+    color: aliceblue;
+    grid-column-start: 8;
+    grid-column-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    order: 3;
 }
 .categoria2a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
+    grid-column-start: 6;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 11;
+    order: 1;
 }
 .categoria2a img{
     width: 100%;
@@ -109,11 +146,14 @@ header{
     object-fit: cover;
 }
 .categoria2b{
-    list-style: none;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 11;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    align-items: flex-end;
+    list-style: none;
 }
 .categoria2b li img{
     width: 100%;
@@ -122,15 +162,32 @@ header{
 }
 
 .categoria3{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 600px;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10,60px)
+}
+.categoria3 button{
+    font-size: 16px;
+    font-family: 'PT Sans', sans-serif;
+    background-color: black;
+    color: aliceblue;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    order: 3;
 }
 .categoria3a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 11;
+    order: 1;
 }
 .categoria3a img{
     width: 100%;
@@ -138,6 +195,10 @@ header{
     object-fit: cover;
 }
 .categoria3b{
+    grid-column-start: 6;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 11;
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -150,15 +211,32 @@ header{
     object-fit: cover;
 }
 .categoria4{
-    display: flex;
-    flex-direction: row;
     width: 100%;
     height: 600px;
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-template-rows: repeat(10,60px)
+}
+.categoria4 button{
+    font-size: 16px;
+    font-family: 'PT Sans', sans-serif;
+    background-color: black;
+    color: aliceblue;
+    grid-column-start: 8;
+    grid-column-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    order: 3;
 }
 .categoria4a{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
     list-style: none;
+    grid-column-start: 6;
+    grid-column-end: 11;
+    grid-row-start: 1;
+    grid-row-end: 11;
+
 }
 .categoria4a img{
     width: 100%;
@@ -167,6 +245,11 @@ header{
 }
 .categoria4b{
     list-style: none;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 11;
+    order: 1;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -188,6 +271,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    padding: 30px;
 }
 .navbottom div{
     font-family: 'PT Sans', sans-serif;
@@ -195,8 +279,8 @@ footer{
 }
 .redes li{
     display: inline;
+    padding-right: 20px;
 }
-
 .ayuda{
     display: flex;
     flex-direction: column;
@@ -207,6 +291,7 @@ footer{
 .info li{
     list-style: none;
 }
+
 .sucursales{
     padding: 3.125rem;
 }
@@ -231,7 +316,6 @@ footer{
     width: 7.0625rem;
     height: 9rem;
 }
-
 .remerascategoria li img{
     width: 100%;
 }
@@ -239,7 +323,6 @@ footer{
     width: 19.5rem;
     height: 468px;
 }
-
 .artremeras div li img{
     width: 100%;
 }
@@ -247,23 +330,19 @@ footer{
 .consultas{
     padding: 5%;
 }
-
 .consultas h1{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.875rem;
     text-decoration: underline;
 }
-
 .consultas p{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
 }
-
 .whatsapp{
     width: 2.5rem;
     height: 2.5rem;
 }
-
 .whatsapp img{
     width: 100%;
 }
@@ -271,11 +350,9 @@ footer{
     width: 2.5rem;
     height: 2.5rem;
 }
-
 .mail img{
     width: 100%;
 }
-
 .formulario-de-consulta{
     border: none;
     font-family: 'PT Sans', sans-serif;
@@ -303,18 +380,15 @@ footer{
     font-size: 1.875rem;
     text-decoration: underline;
 }
-
 .nosotros p{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
 }
-
 .sucursales h1{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.875rem;
     text-decoration: underline;
 }
-
 .aranguren h2{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.5625rem;
@@ -331,7 +405,6 @@ footer{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
 }
-
 .aranguren li{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
