--- a/css/style.css
+++ b/css/style.css
@@ -311,20 +311,48 @@ footer{
 }
 
 
-.remerascategoria li{
-    display: inline-block;
-    width: 7.0625rem;
+.remerascategoria{
+    width: 100%;
     height: 9rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    gap: .625rem;
+}
+.remerascategoria li{
+    list-style: none;
+    gap: 20px;
 }
 .remerascategoria li img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    padding-top: 20px;
 }
-.artremeras div li{
-    width: 19.5rem;
-    height: 468px;
+.remerascategoria li img:hover{
+    box-shadow: 0px 0px .625rem #2D4262; 
+}
+.artremeras {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    padding-top: 1.875rem;
+    text-align: center;
+}
+.artremeras button:hover{
+    list-style: none;
+    box-shadow: 0px 0px .625rem #2D4262; 
+}
+.artremeras li{
+    list-style: none;
 }
 .artremeras div li img{
     width: 100%;
+    height: 468px;
+    object-fit: contain;
+
 }
 
 .consultas{
