--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@ font-family: 'PT Sans', sans-serif;
 }
     /* colores Azul=2D4262 Crema=FFFAF5 */
 
-header{
-    background-color: #2D4262;
-    width: auto;
-}
-
 .navbar{
     background-color: #2D4262;
 }
@@ -27,7 +22,6 @@ header{
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(12,1fr);
 }
-
 .portada img{
     grid-row-start: 1;
     grid-row-end: 13;
@@ -114,7 +108,6 @@ header{
     height: 300px;
     object-fit: cover;
 }
-
 .categoria2{
     width: 100%;
     height: 600px;
@@ -166,7 +159,6 @@ header{
     height: 300px;
     object-fit: cover;
 }
-
 .categoria3{
     width: 100%;
     height: 600px;
@@ -270,15 +262,21 @@ header{
 .categoria4b li img{
     width: 100%;
     height: 300px;  object-fit: cover;
-
 }
-
+.whatsapp{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+.whatsapp img{
+    width: 100%;
+}
 footer{
     height: 20rem;
-    background-color: #2D4262
-    
+    background-color: #2D4262;
 }
-
 .navbottom{
     display: flex;
     justify-content: space-between;
@@ -339,24 +337,80 @@ footer{
     color: black;
     font-family: 'PT Sans', sans-serif;
 }
+
 .sucursales{
+    display: flex;
+    flex-direction: column;
     padding: 3.125rem;
+    justify-content: space-between;
+    padding-left: 3.75rem;
+    padding-right: 3.75rem;
+}
+.sucursales iframe{
+    width: 37.5rem;
+    height: 28.125rem;
+}
+.sucursales h1{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.875rem;
+    text-decoration: underline;
+}
+.aranguren h2{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.5625rem;
+}
+.aranguren h3{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.25rem;
+    
+}
+.aranguren li{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.25rem;
 }
 .campana{
     padding-top: 5%;
 }
+.campana h2{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.5625rem;
+}
+.campana h3{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.25rem;
+}
+.campana li{
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.25rem;
+}
+
 .nosotros h1{
     padding-top: 2%;
     padding-left: 2%;
     font-size: 1.875rem;
+    text-decoration: underline;
+    font-family: 'PT Sans', sans-serif;
 }
 .nosotros p{
-    width: 150rem;
+    width: 100%;
     text-align: justify;
     padding: 5%;
-    font-size: 1.25rem
+    font-size: 1.25rem;
+    font-family: 'PT Sans', sans-serif;
+}
+.videocorp{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 1.25rem;
 }
 
+header{
+    background-color: #2D4262;
+    width: 100%;    
+    position: sticky;
+    top: 0;
+}
 .navtop{
     display: flex;
     flex-direction: row;
@@ -434,11 +488,25 @@ footer{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
 }
-.whatsapp{
+.consulta1{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+}
+.consulta2{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+}
+.whatsappc{
     width: 2.5rem;
     height: 2.5rem;
 }
-.whatsapp img{
+.whatsappc img{
     width: 100%;
 }
 .mail{
@@ -452,60 +520,18 @@ footer{
     border: none;
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
-
+    padding: 10px;
 }
 .formulario-de-consulta input{
     background-color: #D9D9D9;
-    display: list-item;
-    width: 31.25rem;
+    width: 70%;
     font-family: 'PT Sans', sans-serif;
     font-size: .9375rem;
-
+    padding-bottom: 5px;
 }
 .formulario-de-consulta textarea{
     background-color: #D9D9D9;
-    width: 31.25rem;
+    width: 70%;
     font-family: 'PT Sans', sans-serif;
     font-size: .9375rem;
-
 }
-
-.nosotros h1{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.875rem;
-    text-decoration: underline;
-}
-.nosotros p{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.25rem;
-}
-.sucursales h1{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.875rem;
-    text-decoration: underline;
-}
-.aranguren h2{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.5625rem;
-}
-.aranguren h3{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.25rem;
-}
-.campana h2{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.5625rem;
-}
-.campana h3{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.25rem;
-}
-.aranguren li{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.25rem;
-}
-.campana li{
-    font-family: 'PT Sans', sans-serif;
-    font-size: 1.25rem;
-}
-
