--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ font-family: 'PT Sans', sans-serif;
 }
     /* colores Azul=2D4262 Crema=FFFAF5 */
 
-.navbar{
+.bg-body-navbar{
     background-color: #2D4262;
 }
 .portada{
@@ -432,7 +432,7 @@ header{
 }
 .remerascategoria{
     width: 100%;
-    height: 9rem;
+    height: 200px;
     display:grid;
     grid-template-columns: repeat(6, 1fr);
     text-align: center;
@@ -445,7 +445,7 @@ header{
     list-style: none;
     gap: 20px;
     width: 100%;
-    height: 9rem;
+    height: 200px;
 }
 .remerascategoria li img{
     width: 100%;
@@ -540,4 +540,195 @@ header{
     font-size: .9375rem;
 }
 
-@media (max-wi)
+@media (max-width: 768px){
+    .portada{
+        height: 900px;
+    }
+    .portada img{
+        height: 900px;
+    }
+    .portada h1{
+        font-size: 2.5rem;
+    }
+    .categoria1{
+        height: 450px;
+        grid-template-rows: repeat(10,45px)
+    }
+    .categoria1 button{
+        font-size: 16px;
+    }
+    .categoria1a img{
+        height: 450px;
+    }
+    .categoria1b li img{
+        height: 225px;
+    }
+    .categoria2{
+        height: 450px;        
+        grid-template-rows: repeat(10,45px)
+    }
+    .categoria2 button{
+        font-size: 14px;
+    }
+    .categoria2a img{
+        height: 450px;
+    }
+    .categoria2b li img{
+        height: 225px;
+    }
+    .categoria3{
+        height: 450px;
+        grid-template-rows: repeat(10,45px)
+    }
+    .categoria3 button{
+        font-size: 14px;
+    }
+    .categoria3a img{
+        height: 450px;
+    }
+    .categoria3b li img{
+        height: 225px;
+    }
+    .categoria4{
+        height: 450px;
+        grid-template-rows: repeat(10,45px)
+    }
+    .categoria4 button{
+        font-size: 14px;
+    }
+    .categoria4a img{
+        height: 450px;
+    }
+    .categoria4b li img{
+        height: 225px;
+    }
+    footer{
+        height: 15.625rem;
+    }
+    .redes h2{
+        font-size: 1.5625rem;
+    }
+    .ayuda h2{
+        font-size: 1.5625rem;
+    }
+    .ayuda li{
+        line-height: 2;
+    }
+    .info h2{
+        font-size: 1.5625rem;
+    }
+    .info li{
+        line-height: 2;
+    }
+}
+@media (max-width: 425px){
+    .portada{
+        height: 495px;
+    }
+    .portada img{
+        height: 495px;
+    }
+    .portada h1{
+        font-size: 1.25rem;
+    }
+    .portada button{
+        font-size: .75rem;
+    }
+    .categoria1{
+        height: 246px;
+        grid-template-rows: repeat(10,24.6px)
+    }
+    .categoria1 button{
+        font-size: 10px;
+    }
+    .categoria1a img{
+        height: 246px;
+    }
+    .categoria1b li img{
+        height: 123px;
+    }
+    .categoria2{
+        height: 246px;        
+        grid-template-rows: repeat(10,24.6px)
+    }
+    .categoria2 button{
+        font-size: 10px;
+    }
+    .categoria2a img{
+        height: 246px;
+    }
+    .categoria2b li img{
+        height: 123px;
+    }
+    .categoria3{
+        height: 246px;
+        grid-template-rows: repeat(10,24.6px)
+    }
+    .categoria3 button{
+        font-size: 10px;
+    }
+    .categoria3a img{
+        height: 246px;
+    }
+    .categoria3b li img{
+        height: 123px;
+    }
+    .categoria4{
+        height: 246px;
+        grid-template-rows: repeat(10,24.6px)
+    }
+    .categoria4 button{
+        font-size: 10px;
+    }
+    .categoria4a img{
+        height: 246px;
+    }
+    .categoria4b li img{
+        height: 123px;
+    }
+    footer{
+        height: 200px;
+    }
+    .navbottom{
+        padding: 0;
+        padding-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-content: start;
+    }
+    .redes{
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-right: 1.5625rem;
+    }
+    .redes h2{
+        font-size: 1.125rem;
+    }
+    .redes li{
+        display: list-item;
+        list-style: none;
+    }
+    .redes img{
+        width: 20px;
+        height: 20px;
+    }
+    .ayuda h2{
+        font-size: 1.125rem;
+    }
+    .ayuda li{
+        line-height: 1;
+    }
+    .ayuda li a{
+        font-size: .875rem;
+        padding: 0;
+    }
+    .info h2{
+        font-size: 1.125rem;
+    }
+    .info li{
+        line-height: 1;
+    }
+    .info li a{
+        font-size: .875rem;
+    }
+}
