--- a/css/style.css
+++ b/css/style.css
@@ -345,24 +345,34 @@ font-family: 'PT Sans', sans-serif;
 .sucursales iframe{
     width: 37.5rem;
     height: 28.125rem;
+    padding: 20px;
 }
 .sucursales h1{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.875rem;
     text-decoration: underline;
+    padding-top: 10px;
 }
 .aranguren h2{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.5625rem;
+    line-height: 1.5;
+    padding-top: 20px;
 }
 .aranguren h3{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
-    
+    line-height: 1.5;
+    padding-left: 1.25rem;
 }
 .aranguren li{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
+    list-style-position: inside;
+    padding-left: 1.875rem;
+}
+.maparanguren{
+    padding-left: 2.5rem;
 }
 .campana{
     padding-top: 5%;
@@ -370,14 +380,23 @@ font-family: 'PT Sans', sans-serif;
 .campana h2{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.5625rem;
+    line-height: 1.5;
+    padding-top: 20px;
 }
 .campana h3{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
+    line-height: 1.5;
+    padding-left: 1.25rem;
 }
 .campana li{
     font-family: 'PT Sans', sans-serif;
     font-size: 1.25rem;
+    list-style-position: inside;
+    padding-left: 1.875rem;
+}
+.mapcampana{
+    padding-left: 2.5rem;
 }
 footer{
     height: 20rem;
@@ -609,14 +628,14 @@ header{
 }
 .formulario-de-consulta input{
     background-color: #D9D9D9;
-    width: 70%;
+    width: 90%;
     font-family: 'PT Sans', sans-serif;
     font-size: .9375rem;
     padding-bottom: 5px;
 }
 .formulario-de-consulta textarea{
     background-color: #D9D9D9;
-    width: 70%;
+    width: 90%;
     font-family: 'PT Sans', sans-serif;
     font-size: .9375rem;
 }
@@ -711,6 +730,46 @@ header{
     }
     .infoI li a{
         font-size: 16px;
+    }
+
+    .navtop li a{
+        font-size: 1.0625rem;
+    }
+    .remerascategoria{
+        height: 150px;
+    }
+    .remerascategoria li{
+        height: 90px;
+        font-size: 14px;
+    }
+    .artremeras {
+        grid-template-columns: repeat(3,1fr);
+        padding-top: 30px;
+        padding-bottom: 50px;
+        gap: 10px;
+    }
+    .navbottom{
+        padding-top: 20px;
+    }
+    .redes h2{
+        font-size: 1.5625rem;
+    }
+    .ayuda h2{
+        font-size: 1.5625rem;
+        padding-bottom: 3px;
+    }
+    .ayuda li{
+        line-height: 2;
+    }
+    .info h2{
+        font-size: 1.5625rem;
+    }
+    .info li{
+        line-height: 2;
+    }
+
+    .nosotros p{
+        font-size: 1.125rem;
     }
 }
 
@@ -868,46 +927,7 @@ header{
     .infoI li a{
         font-size: 13px;
     }
-}
 
-@media (max-width: 768px){
-    .navtop li a{
-        font-size: 1.0625rem;
-    }
-    .remerascategoria{
-        height: 150px;
-    }
-    .remerascategoria li{
-        height: 90px;
-        font-size: 14px;
-    }
-    .artremeras {
-        grid-template-columns: repeat(3,1fr);
-        padding-top: 30px;
-        padding-bottom: 50px;
-        gap: 10px;
-    }
-    .navbottom{
-        padding-top: 20px;
-    }
-    .redes h2{
-        font-size: 1.5625rem;
-    }
-    .ayuda h2{
-        font-size: 1.5625rem;
-        padding-bottom: 3px;
-    }
-    .ayuda li{
-        line-height: 2;
-    }
-    .info h2{
-        font-size: 1.5625rem;
-    }
-    .info li{
-        line-height: 2;
-    }
-}
-@media (max-width: 426px){
     .navtop{
         gap: 14px;
         padding-left: .3125rem;
@@ -916,12 +936,12 @@ header{
         font-size: 12px;
     }
     .remerascategoria{
-        height: 80px;
+        height: 70px;
         grid-template-columns: repeat(8, 1fr);
         gap: .9375rem;
     }
     .remerascategoria li{
-        height: 60px;
+        height: 50px;
         font-size: 10px;
     }
     .vertodo{
@@ -994,7 +1014,7 @@ header{
         padding-left: .625rem;
     }
     .ayuda li{
-        line-height: 1;
+        line-height: 1.2;
         padding-left: 10px;
     }
     .ayuda li a{
@@ -1006,9 +1026,60 @@ header{
         padding-bottom: .3125rem;
     }
     .info li{
-        line-height: 1;
+        line-height: 1.2;
     }
     .info li a{
         font-size: .8125rem;
+    }
+
+    .sucursales{
+        padding: 30px;
+        justify-content: space-between;
+        padding-left: 1.25rem;
+    }
+    .sucursales iframe{
+        width: 380px;
+        height: 18.75rem;
+    }
+    .aranguren h3{
+        padding-left: 0;
+    }
+    .aranguren li{
+        padding-left: 0;
+    }
+    .maparanguren{
+        padding-left: 0;
+    }
+    .campana h3{
+        padding-left: 0;
+    }
+    .campana li{
+        padding-left: 0;
+    }
+    .mapcampana{
+        padding-left: 0;
+    }
+
+    .nosotros p{
+        font-size: 14px;
+    }
+    .videocorp{
+        padding: 5%;
+    }
+
+    .consultas h1{
+        font-size: 25px;
+    }
+    .consultas p{
+        font-size: 18px;
+    }
+    .formulario-de-consulta{
+        font-size: 18px;
+    }
+    .formulario-de-consulta input{
+        font-size: 12px;
+    }
+    .formulario-de-consulta textarea{
+        font-size: 12px;
     }
 }
