--- a/css/style.css
+++ b/css/style.css
@@ -580,8 +580,80 @@ header{
     object-fit: contain;
 }
 
+.pantalonescategoria{
+    width: 100%;
+    height: 200px;
+    display:grid;
+    grid-template-columns: repeat(10, 1fr);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: .625rem;
+}
+.pantalonescategoria li{
+    list-style: none;
+    gap: 20px;
+    width: 100%;
+    height: 100px;
+}
+.vertodo{
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+.mangacorta{
+    grid-column-start: 4;
+    grid-column-end: 5;
+}
+.mangalarga{
+    grid-column-start: 5;
+    grid-column-end: 6;
+}
+.bordado{
+    grid-column-start: 6;
+    grid-column-end: 7,
+}
+.estampado{
+    grid-column-start: 7;
+    grid-column-end: 8;
+}
+.liso{
+    grid-column-start: 8;
+    grid-column-end: 9;
+}
+.pantalonescategoria li img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 70%;
+}
+.pantalonescategoria li img:hover{
+    box-shadow: 0px 0px .625rem #2D4262; 
+}
+.artpantalones {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    padding-top: 70px;
+    padding-bottom: 70px;
+    text-align: center;
+    gap: 1.875rem;
+}
+.artpantalones button:hover{
+    list-style: none;
+    box-shadow: 0px 0px .625rem #2D4262; 
+}
+.artpantalones li{
+    list-style: none;
+}
+.artpantalones div li img{
+    width: 100%;
+    height: 21.875rem;
+    object-fit: contain;
+}
+
 .consultas{
     padding: 5%;
+    height: 950px;
 }
 .consultas h1{
     font-family: 'PT Sans', sans-serif;
@@ -766,6 +838,20 @@ header{
     }
     .info li{
         line-height: 2;
+    }
+
+    .pantalonescategoria{
+        height: 150px;
+    }
+    .pantalonescategoria li{
+        height: 90px;
+        font-size: 14px;
+    }
+    .artpantalones {
+        grid-template-columns: repeat(3,1fr);
+        padding-top: 30px;
+        padding-bottom: 50px;
+        gap: 10px;
     }
 
     .nosotros p{
@@ -977,6 +1063,26 @@ header{
     .artremeras div li img{
         height: 300px;
     }
+
+    .pantalonescategoria{
+        height: 70px;
+        grid-template-columns: repeat(8, 1fr);
+        gap: .9375rem;
+    }
+    .pantalonescategoria li{
+        height: 50px;
+        font-size: 10px;
+    }
+    .artpantalones {
+        grid-template-columns: repeat(1,1fr);
+        padding-top: 30px;
+        padding-bottom: 30px;
+        gap: 20px;
+    }
+    .artpantalones div li img{
+        height: 300px;
+    }
+
     .navbottom{
         padding: 15px;
         padding-top: 10px;
