--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,11 @@
   padding: 0;
   box-sizing: border-box; }
 
-.bg-body-navbar {
-  background-color: #2D4262; }
+header {
+  background-color: #2D4262;
+  width: 100%;
+  position: sticky;
+  top: 0; }
 
 .portada {
   background-color: #FFFAF5;
@@ -117,6 +120,23 @@
   grid-row-start: 1;
   grid-row-end: 11; }
 
+.navtop {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  list-style: none;
+  height: 50px;
+  gap: 1.875rem;
+  padding-left: 1.25rem; }
+  .navtop li a {
+    color: aliceblue;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: "PT Sans", sans-serif; }
+    .navtop li a:hover {
+      text-shadow: 0px 0px .625rem aliceblue; }
+
 .whatsapp {
   position: fixed;
   right: 0;
@@ -133,7 +153,7 @@
   align-items: baseline;
   padding: 30px; }
   .navbottomI div {
-    font-family: 'PT Sans', sans-serif;
+    font-family: "PT Sans", sans-serif;
     flex-direction: row; }
     .navbottomI div h2 {
       font-family: "PT Sans", sans-serif;
@@ -156,3 +176,6 @@
 
 .ayudaI li a {
   padding-left: 1.6875rem; }
+
+.bg-body-navbar {
+  background-color: #2D4262; }
