--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,3 +1,25 @@
+.navtop{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    list-style: none;
+    height: 50px;
+    gap: 1.875rem;
+    padding-left: 1.25rem;
+    li{
+        a{
+            color: aliceblue;
+            text-decoration: none;
+            font-size: map-get($font-size, sm);
+            font-family: $font-texto;
+            &:hover{
+                text-shadow: 0px 0px .625rem aliceblue;
+            }
+        }
+    }
+}
+
 .whatsapp{
     position: fixed;
     right: 0;
@@ -16,7 +38,7 @@
     align-items: baseline;
     padding: 30px;
     div{
-        font-family: 'PT Sans', sans-serif;
+        font-family: $font-texto;
         flex-direction: row;
         h2{
             font-family: $font-texto;
