--- a/css/style.css
+++ b/css/style.css
@@ -177,5 +177,104 @@ header {
 .ayudaI li a {
   padding-left: 1.6875rem; }
 
+.mainCategoria {
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem; }
+  .mainCategoria li {
+    list-style: none;
+    gap: 20px;
+    width: 100%;
+    height: 100px; }
+    .mainCategoria li img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 70%; }
+      .mainCategoria li img:hover {
+        box-shadow: 0px 0px .625rem #2D4262; }
+
+.vertodo {
+  grid-column-start: 3;
+  grid-column-end: 4; }
+
+.cat1 {
+  grid-column-start: 4;
+  grid-column-end: 5; }
+
+.cat2 {
+  grid-column-start: 5;
+  grid-column-end: 6; }
+
+.cat3 {
+  grid-column-start: 6;
+  grid-column-end: 7; }
+
+.cat4 {
+  grid-column-start: 7;
+  grid-column-end: 8; }
+
+.cat5 {
+  grid-column-start: 8;
+  grid-column-end: 9; }
+
+.listaArticulos {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: none;
+  align-items: none;
+  gap: 1.875rem;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  text-align: center; }
+  .listaArticulos div li {
+    list-style: none; }
+    .listaArticulos div li img {
+      width: 100%;
+      height: 21.875rem;
+      object-fit: contain; }
+    .listaArticulos div li button:hover {
+      list-style: none;
+      box-shadow: 0px 0px .625rem #2D4262; }
+
+.sucursales {
+  display: flex;
+  flex-direction: column;
+  padding: 3.125rem;
+  justify-content: space-between;
+  padding-left: 3.75rem;
+  padding-right: 3.75rem; }
+  .sucursales h1 {
+    font-family: "PT Sans", sans-serif;
+    font-size: 30px;
+    text-decoration: underline;
+    padding-top: 10px; }
+    .sucursales h1 div h2 {
+      font-family: "PT Sans", sans-serif;
+      font-size: 20px;
+      line-height: 1.5;
+      padding-top: 20px; }
+    .sucursales h1 div h3 {
+      font-family: "PT Sans", sans-serif;
+      font-size: 18px;
+      line-height: 1.5;
+      padding-left: 1.25rem; }
+    .sucursales h1 div li {
+      font-family: "PT Sans", sans-serif;
+      font-size: 18px;
+      list-style-position: inside;
+      padding-left: 1.875rem; }
+    .sucursales h1 div iframe {
+      width: 37.5rem;
+      height: 28.125rem;
+      padding: 20px;
+      padding-left: 2.5rem; }
+
 .bg-body-navbar {
   background-color: #2D4262; }
