--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,13 +3,16 @@
 
 @import "./utilities/variables";
 @import "./utilities/maps";
+@import "./utilities/mixins";
 
 @import "./base/reset";
 
 @import "./layout/header";
 @import "./layout/main-index";
 @import "./layout/navbar";
+@import "./layout/footer";
 @import "./layout/main-categorias";
+@import "./layout/main-sucursales";
 
 @import "./components/bootstrap";
 
