--- a/scss/layout/_main-sucursales.scss
+++ b/scss/layout/_main-sucursales.scss
@@ -7,34 +7,39 @@
     padding-right: 3.75rem;
     h1{
         font-family: $font-texto;
-        font-size: map-get($font-size, xl);
+        font-size: map-get($font-size, xxl);
         text-decoration: underline;
         padding-top: 10px;
-        div{
-            h2{
-                font-family: $font-texto;
-                font-size: map-get($font-size, md);
-                line-height: 1.5;
-                padding-top: 20px;
-            }
-            h3{
-                font-family: $font-texto;
-                font-size: map-get($font-size, sm);
-                line-height: 1.5;
-                padding-left: 1.25rem;
-            }
-            li{
-                font-family: $font-texto;
-                font-size: map-get($font-size, sm);
-                list-style-position: inside;
-                padding-left: 1.875rem;
-            }
-            iframe{
-                width: 37.5rem;
-                height: 28.125rem;
-                padding: 20px;
-                padding-left: 2.5rem;
-            }
-        }
     }
+}
+.aranguren{
+    h2{
+        font-family: $font-texto;
+        font-size: map-get($font-size, xl);
+        line-height: 1.5;
+        padding-top: 20px;
+    }
+    h3{
+        font-family: $font-texto;
+        font-size: map-get($font-size, md);
+        line-height: 1.5;
+        padding-left: 1.25rem;
+    }
+    li{
+        font-family: $font-texto;
+        font-size: map-get($font-size, sm);
+        list-style-position: inside;
+        padding-left: 1.875rem;
+    }
+    iframe{
+        padding-left: 2.5rem;
+        width: 37.5rem;
+        height: 28.125rem;
+        padding: 20px;
+    }
+}
+
+.campana{
+    padding-top: 5%;
+    @extend .aranguren
 }
