--- a/scss/components/_bootstrap.scss
+++ b/scss/components/_bootstrap.scss
@@ -1,3 +1,53 @@
 .bg-body-navbar{
     background-color: #2D4262;
 }
+
+.navbottomI{
+    background-color: $bg-nav;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 30px;
+    div{
+        font-family: $font-texto;
+        flex-direction: row;
+        h2{
+            font-family: $font-texto;
+            color: $color-texto;
+            font-size: map-get($font-size, xl);
+            font-weight: bold;
+        }
+        li{
+            list-style: none;
+            line-height: 2.5;
+            a{
+
+            }
+        }
+    }
+}
+
+.redesI{
+    li{
+    display: inline;
+    padding-right: 30px;
+    }
+}
+.infoI{
+    li{
+        a{
+    text-decoration: none;
+    font-family: $font-texto;
+    color: $color-texto;
+    font-size: map-get($font-size,sm);
+        }
+    }
+}
+.ayudaI{
+    @extend .infoI;
+    li{
+        a{
+            padding-left: 1.6875rem;
+        }
+    }
+}
