--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,6 @@ header {
   .whatsapp img {
     width: 100%; }
 
-footer {
-  height: 20rem;
-  background-color: #2D4262; }
-
 .redes {
   line-height: 2.5; }
   .redes h2 {
@@ -181,6 +177,10 @@ footer {
 
 .info li a {
   padding-left: 0; }
+
+footer {
+  height: 20rem;
+  background-color: #2D4262; }
 
 .mainCategoria {
   width: 100%;
@@ -251,8 +251,8 @@ footer {
 .sucursales {
   display: flex;
   flex-direction: column;
-  padding: 3.125rem;
   justify-content: space-between;
+  padding: 3.125rem;
   padding-left: 3.75rem;
   padding-right: 3.75rem; }
   .sucursales h1 {
@@ -287,6 +287,68 @@ footer {
 
 .campana {
   padding-top: 5%; }
+
+.nosotros h1 {
+  padding-top: 2%;
+  padding-left: 2%;
+  font-size: 30px;
+  text-decoration: underline;
+  font-family: "PT Sans", sans-serif; }
+
+.nosotros p {
+  width: 100%;
+  text-align: justify;
+  padding: 5%;
+  font-size: 20px;
+  font-family: "PT Sans", sans-serif; }
+
+.videocorp {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 1.25rem; }
+
+.formulario-de-consulta {
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  padding: 10px; }
+  .formulario-de-consulta input {
+    background-color: #D9D9D9;
+    width: 90%;
+    font-family: "PT Sans", sans-serif;
+    font-size: 18px;
+    padding-bottom: 5px; }
+  .formulario-de-consulta textarea {
+    background-color: #D9D9D9;
+    width: 90%;
+    font-family: "PT Sans", sans-serif;
+    font-size: 18px;
+    padding-bottom: 5px; }
+
+.consultas {
+  padding: 5%;
+  height: 950px; }
+  .consultas h1 {
+    font-family: "PT Sans", sans-serif;
+    font-size: 30px;
+    text-decoration: underline; }
+  .consultas p {
+    font-family: "PT Sans", sans-serif;
+    font-size: 20px; }
+
+.opciones {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px; }
+
+.whatsappc, .mail {
+  width: 2.5rem;
+  height: 2.5rem; }
+  .whatsappc img, .mail img {
+    width: 100%; }
 
 .bg-body-navbar {
   background-color: #2D4262; }
