--- a/scss/layout/_main-sucursales.scss
+++ b/scss/layout/_main-sucursales.scss
@@ -1,8 +1,6 @@
 .sucursales{
-    display: flex;
-    flex-direction: column;
+    @include flex(column, space-between);
     padding: 3.125rem;
-    justify-content: space-between;
     padding-left: 3.75rem;
     padding-right: 3.75rem;
     h1{
