--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@
 @import "./layout/footer";
 @import "./layout/main-categorias";
 @import "./layout/main-sucursales";
+@import "./layout/main-nosotros";
+@import "./layout/main-consultas";
 
 @import "./components/bootstrap";
 
