--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,7 +1,5 @@
 .navtop{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    @include flex(row, flex-start);
     align-items: center;
     list-style: none;
     height: 50px;
